<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Shopping Solver</string>
    <string name="textview_login">User name</string>
    <string name="action_settings">Settings</string>
    <string name="textview_password">Password:</string>
    <string name="button_connexion">Connexion</string>
    <string name="textview_email">Email:</string>
    <string name="textview_name">Name:</string>
    <string name="textview_street">Street:</string>
    <string name="textview_city">City:</string>
    <string name="textview_country">Country:</string>
    <string name="textview_postcode">Postcode:</string>
    <string name="textview_balance">Balance : </string>
    <string name="textview_phone">Phone:</string>
    <string name="textview_total">Total : </string>
    <string name="textview_products">Products : </string>
    <string name="button_scan">Scan Code</string>
    <string name="button_pay">Make Payment</string>
    <string name="textview_shoppinglist">Shopping List...</string>
    <string name="tv_productName">Products</string>
    <string name="tv_unitPrice">UnitPrice($)</string>
    <string name="tv_quantity">Quantity</string>
    <string name="tv_itemPrice">Price</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_habit">Your consumption habit...</string>
    <string name="button_saveClientInfo">Save your information</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="btn_newuser">New User</string>
    <string name="ignore">Ignore</string>
    <string name="settings">Settings</string>

    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Make Payment</item>
        <item >Count Detail</item>
        <item >Consumption Habit</item>
        <item >Your Receptions</item>
    </string-array>


    <string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	
	<string name="scan_text">Put the QRcode in the zone, the scan launchs automatically.</string>
    <string name="title_activity_maps_shops">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
